--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
               Eager sofwtare developer with 2+ years of post-secondary experience. Advanced in web-applications, Data Analytics using Python, and Android mobile development using Java. During my free time, I enjoy weight lifting and staying physically fit.  
             </p>
             <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
+            <a href="./Mitchell Watson Resume 2023.pdf" class="btn" download>My Resume</a>
           </div>
 
           <div class="about__photo-container">
