--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
                 <p>C</p>
               </div>
               <div class="container">
+                <img class="icon_img" src="./images/c++.png">
+                <p>C++</p>
+              </div>
+              <div class="container">
                 <img class="icon_img" src="./images/css.png">
                 <p>CSS 3</p>
               </div>              <div class="container">
@@ -100,6 +104,14 @@
                 <p>Javascript</p>
               </div> 
               <div class="container">
+                <img class="icon_img" src="./images/linux.png">
+                <p>linux</p>
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/ml.png">
+                <p>Machine Learning</p>
+              </div>
+              <div class="container">
                 <img class="icon_img" src="./images/mongo.png">
                 <p>MongoDB</p>
               </div>                  <div class="container">
@@ -112,6 +124,10 @@
               <div class="container">
                 <img class="icon_img" src="./images/python.webp">
                 <p>Python</p>
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/react.png">
+                <p>React</p>
               </div>
             </div>
           </div>
