fixed linux typo

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               </div> 
               <div class="container">
                 <img class="icon_img" src="./images/linux.png">
-                <p>linux</p>
+                <p>Linux</p>
               </div>
               <div class="container">
                 <img class="icon_img" src="./images/ml.png">
