new changes september 2023

--- a/index.html
+++ b/index.html
@@ -142,6 +142,70 @@
 
           <div class="work__box">
             <div class="work__text">
+              <h3>Full-Stack Machine Learning Model</h3>
+              <p>
+                A front interface and back-end machine learning model that predicts nordic snowfall levels.
+              </p>
+              <ul class="work__list">
+                <li>Machine Learning</li>
+                <li>Python</li>
+                <li>Streamlit</li>
+                <li>Data Analysis</li>
+              </ul>
+
+              <div class="work__links">
+                <a href="https://mitchellwatson-streamlit-homepage-0hc9cv.streamlit.app/" target="_blank" class="link__text">
+                  Visit Website <span>&rarr;</span>
+                </a>
+                <a title="View Website" target="_blank">
+                  <img src="./images/linkicon.png" class="work__code" alt="Link">
+                </a>
+              </div>
+
+              <div class="work__links">
+                <a href="https://github.com/MitchellWatson/Streamlit/tree/main" target="_blank" class="link__text">
+                  Visit Github <span>&rarr;</span>
+                </a>
+                <a title="View Source Code" target="_blank">
+                  <img src="./images/github.svg" class="work__code" alt="GitHub">
+                </a>
+              </div>
+            </div>
+            <div class="work__image-box">
+              <img src="./images/streamlit.png" class="work__image" alt="Streamlit" />
+            </div>
+          </div>
+
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Machine Learning Language Model 3D Graphing</h3>
+              <p>
+                A tutorial on how to 3D graph and visualize machine learning language models using word vecotrs.
+              </p>
+              <ul class="work__list">
+                <li>Gensim</li>
+                <li>Word Vectorization</li>
+                <li>Machine Learning</li>
+                <li>Python</li>
+              </ul>
+
+              <div class="work__links">
+                <a href="https://www.dropbox.com/scl/fi/hcirlvln0qqttgazb5y0l/Gensim-Word-Visualization-Tutorial.docx?rlkey=fs55obvgea792nwwt5ddnrjee&dl=0" target="_blank" class="link__text">
+                  Visit Tutorial <span>&rarr;</span>
+                </a>
+                <a title="View Turotial" target="_blank">
+                  <img src="./images/linkicon.png" class="work__code" alt="Link">
+                </a>
+              </div>
+
+            </div>
+            <div class="work__image-box">
+              <img src="./images/graphing.png" class="work__image" alt="Graph" />
+            </div>
+          </div>
+
+          <div class="work__box">
+            <div class="work__text">
               <h3>Aflo</h3>
               <p>
                 A mobile Android app for users planning a vacation with budget in mind.
@@ -201,12 +265,9 @@
         <h2>My Work/Clients</h2>
         <div class="client__logos">
           <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
+          <img src="./images/ronjones.png" class="client__logo" alt="Company 1" />
+          <img src="./images/super.png" class="client__logo" alt="Company 2" />
         </div>
-        <br>
-        <a href="https://www.bcit.ca/applied-research/smart-microgrid/" target="_blank" class="link__text">
-          Visit Project Page <span>&rarr;</span>
-        </a>
       </div>
     </section>
 
@@ -219,7 +280,7 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              Eager sofwtare developer with 2+ years of post-secondary experience. Advanced in web-applications, Data Analytics using Python, and Android mobile development using Java. During my free time, I enjoy weight lifting and staying physically fit.  
+              Eager software development team member with 2+ years of post-secondary experience. Advanced in web-applications, Data Analytics/Machine Learning using Python, and Android mobile development using Java. During my free time, I enjoy weightlifting and staying physically fit.
             </p>
             <!-- Provide a link to your resume -->
             <a href="./Mitchell Watson Resume 2023.pdf" class="btn" download>My Resume</a>
@@ -242,10 +303,10 @@
       <h2>Get in Touch</h2>
       <div class="contact__info">
         <p>
-          You can reach me the easiest through my personal email. Feel free to contact me regarding any opportunities or queries. I look forward to hearing from you!
+          You can reach me the easiest through my personal email. My LinkedIn and GitHub are linked below for your access. Feel free to contact me regarding any opportunities or queries. I look forward to hearing from you!
         </p>
         <!-- Replace the email with yours -->
-        <a href="mailto:mitchwatson2002@gmail.com" class="btn">mitchwatson2002@gmail.com</a>
+        <a href="mailto:mitchellgwatson@gmail.com" class="btn">mitchellgwatson@gmail.com</a>
         <ul class="footer__social-links">
           <li class="footer__social-link-item">
             <a href="https://github.com/MitchellWatson" title="Link to Github Profile">
