fine changes and picture uploads

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         <div class="work__boxes">
 
           <!-- Each div with the work__box class is a project. -->
-
+          <h3>
+            Langauges
+          </h3>
           <div class="work__box">
             <div class="container">
               <div class="container">
@@ -161,7 +163,7 @@
                   <img src="./images/linkicon.png" class="work__code" alt="Link">
                 </a>
               </div>
-
+              <br>
               <div class="work__links">
                 <a href="https://github.com/MitchellWatson/Streamlit/tree/main" target="_blank" class="link__text">
                   Visit Github <span>&rarr;</span>
@@ -180,7 +182,7 @@
             <div class="work__text">
               <h3>Machine Learning Language Model 3D Graphing</h3>
               <p>
-                A tutorial on how to 3D graph and visualize machine learning language models using word vecotrs.
+                A tutorial on how to 3D graph and visualize machine learning language models using word vectors.
               </p>
               <ul class="work__list">
                 <li>Gensim</li>
