--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
         <div class="work__boxes">
 
           <!-- Each div with the work__box class is a project. -->
-          <h3>
-            Langauges
-          </h3>
+          <h3>Langauges</h3>
           <div class="work__box">
             <div class="container">
               <div class="container">
@@ -215,6 +213,8 @@
               <ul class="work__list">
                 <li>Android</li>
                 <li>Java</li>
+                <li>Firebase</li>
+                <li>Figma</li>
               </ul>
 
               <div class="work__links">
