added skills and sub categories for skills

--- a/index.html
+++ b/index.html
@@ -76,10 +76,6 @@
           <div class="work__box">
             <div class="container">
               <div class="container">
-                <img class="icon_img" src="./images/android.png">
-                <p>Android</p>
-              </div>
-              <div class="container">
                 <img class="icon_img" src="./images/c.png">
                 <p>C</p>
               </div>
@@ -88,46 +84,200 @@
                 <p>C++</p>
               </div>
               <div class="container">
+                <img class="icon_img" src="./images/csharp.png">
+                <p>C#</p>
+              </div>
+              <div class="container">
                 <img class="icon_img" src="./images/css.png">
                 <p>CSS 3</p>
-              </div>              <div class="container">
-                <img class="icon_img" src="./images/github.jpg">
-                <p>GitHub</p>
-              </div>              <div class="container">
+              </div>                           
+              <div class="container">
                 <img class="icon_img" src="./images/html5.png">
                 <p>HTML 5</p>
-              </div>              <div class="container">
+              </div>              
+              <div class="container">
                 <img class="icon_img" src="./images/java.jpg">
                 <p>Java</p>
-              </div>              <div class="container">
+              </div>              
+              <div class="container">
                 <img class="icon_img" src="./images/javascript.png">
                 <p>Javascript</p>
               </div> 
               <div class="container">
-                <img class="icon_img" src="./images/linux.png">
-                <p>Linux</p>
+                <img class="icon_img" src="./images/python.webp">
+                <p>Python</p>
+              </div> 
+              <div class="container">
+                <img class="icon_img" src="./images/r.png">
+                <p>R</p>
               </div>
               <div class="container">
-                <img class="icon_img" src="./images/ml.png">
-                <p>Machine Learning</p>
+                <img class="icon_img" src="./images/sql.png">
+                <p>SQL</p>
+              </div>
+            </div>
+          </div>
+
+          <h3>Technologies</h3>
+          <div class="work__box">
+            <div class="container">
+              <div class="container">
+                <img class="icon_img" src="./images/react.png">
+                <p>React.js</p>
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/mysql.png">
+                <p>MySQL</p>
               </div>
               <div class="container">
                 <img class="icon_img" src="./images/mongo.png">
                 <p>MongoDB</p>
-              </div>                  <div class="container">
-                <img class="icon_img" src="./images/mysql.png">
-                <p>MySQL</p>
-              </div>              <div class="container">
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/firebase.png">
+                <p>Firebase</p>
+              </div>                           
+              <div class="container">
+                <img class="icon_img" src="./images/linux.png">
+                <p>Linux</p>
+              </div>              
+              <div class="container">
+                <img class="icon_img" src="./images/android.png">
+                <p>Android</p>
+              </div>              
+              <div class="container">
                 <img class="icon_img" src="./images/node.png">
                 <p>Node.js</p>
+              </div> 
+              <div class="container">
+                <img class="icon_img" src="./images/express.png">
+                <p>Express.js</p>
               </div>
               <div class="container">
-                <img class="icon_img" src="./images/python.webp">
-                <p>Python</p>
+                <img class="icon_img" src="./images/django.png">
+                <p>Django</p>
               </div>
               <div class="container">
-                <img class="icon_img" src="./images/react.png">
-                <p>React</p>
+                <img class="icon_img" src="./images/tensorflow.png">
+                <p>Tensorflow</p>
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/pytorch.png">
+                <p>PyTorch</p>
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/matplotlib.png">
+                <p>MatPlotLib</p>
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/matlab.png">
+                <p>Matlab</p>
+              </div>                           
+              <div class="container">
+                <img class="icon_img" src="./images/seaborn.png">
+                <p>Seaborn</p>
+              </div>              
+              <div class="container">
+                <img class="icon_img" src="./images/plotly.png">
+                <p>Plotly</p>
+              </div>              
+              <div class="container">
+                <img class="icon_img" src="./images/pandas.png">
+                <p>Pandas</p>
+              </div> 
+              <div class="container">
+                <img class="icon_img" src="./images/numpy.png">
+                <p>Numpy</p>
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/github.jpg">
+                <p>GitHub</p>
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/figma.png">
+                <p>Figma</p>
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/rest.png">
+                <p>REST</p>
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/junit.png">
+                <p>JUnit</p>
+              </div>                           
+              <div class="container">
+                <img class="icon_img" src="./images/xml.png">
+                <p>XML</p>
+              </div>              
+              <div class="container">
+                <img class="icon_img" src="./images/excel.png">
+                <p>Excel</p>
+              </div>              
+              <div class="container">
+                <img class="icon_img" src="./images/nosql.png">
+                <p>NoSQL</p>
+              </div> 
+              <div class="container">
+                <img class="icon_img" src="./images/jest.png">
+                <p>Jest</p>
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/graphql.png">
+                <p>GraphQL</p>
+              </div> 
+              <div class="container">
+                <img class="icon_img" src="./images/aws.jpg">
+                <p>AWS</p>
+              </div>
+            </div>
+          </div>
+
+          <h3>Priciples</h3>
+          <div class="work__box">
+            <div class="container">
+              <div class="container">
+                <img class="icon_img" src="./images/oop.png">
+                <p>Object Oriented Programming (OOP)</p>
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/ml.png">
+                <p>Machine Learning (ML)</p>
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/dataanalytics.png">
+                <p>Predictive/Data Analytics</p>
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/data manage.png">
+                <p>Database Design/Management</p>
+              </div>                           
+              <div class="container">
+                <img class="icon_img" src="./images/algo.png">
+                <p>Algorithms</p>
+              </div>              
+              <div class="container">
+                <img class="icon_img" src="./images/isa.jpg">
+                <p>Internet Service Architecture</p>
+              </div>              
+              <div class="container">
+                <img class="icon_img" src="./images/network.png">
+                <p>Network Protocols</p>
+              </div> 
+              <div class="container">
+                <img class="icon_img" src="./images/business.jpg">
+                <p>Business Communications</p>
+              </div> 
+              <div class="container">
+                <img class="icon_img" src="./images/agile.jpg">
+                <p>Agile Methodology</p>
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/bigdata.jpg">
+                <p>Big Data</p>
+              </div>
+              <div class="container">
+                <img class="icon_img" src="./images/neural.png">
+                <p>Neural Networks</p>
               </div>
             </div>
           </div>
