fixed isa filename

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <p>Algorithms</p>
               </div>              
               <div class="container">
-                <img class="icon_img" src="./images/isa.jpg">
+                <img class="icon_img" src="./images/isa.png">
                 <p>Internet Service Architecture</p>
               </div>              
               <div class="container">
