fixed typo and contact spacing

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             <div class="work__text">
               <h3>Full-Stack Machine Learning Model</h3>
               <p>
-                A front interface and back-end machine learning model that predicts nordic snowfall levels.
+                A front-end interface and back-end machine learning model that predicts nordic snowfall levels.
               </p>
               <ul class="work__list">
                 <li>Machine Learning</li>
@@ -455,7 +455,10 @@
       <h2>Get in Touch</h2>
       <div class="contact__info">
         <p>
-          You can reach me the easiest through my personal email. My LinkedIn and GitHub are linked below for your access. Feel free to contact me regarding any opportunities or queries. I look forward to hearing from you!
+          You can reach me the easiest through my personal email. My LinkedIn and GitHub are linked below for your access.
+        </p>
+        <p>
+          Feel free to contact me regarding any opportunities or queries. I look forward to hearing from you!
         </p>
         <!-- Replace the email with yours -->
         <a href="mailto:mitchellgwatson@gmail.com" class="btn">mitchellgwatson@gmail.com</a>
