--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     <div class="topnav">
       <h3>Mitchell Watson</h3>
       <div class="topnav-right">
-        <a href="#work">Work</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
         <a href="#clients">Clients</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
@@ -66,7 +67,7 @@
 
     <!-- ***** Work ***** -->
 
-    <section class="work" id="work">
+    <section class="skills" id="skills">
       <div class="row">
         <h2>My Skills</h2>
         <div class="work__boxes">
@@ -283,7 +284,7 @@
           </div>
 
     </section>
-    <section class="work" id="work">
+    <section class="projects" id="projects">
       <div class="row">
         <h2>My Projects</h2>
         <div class="work__boxes">
