--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             </div>
           </div>
 
-          <h3>Priciples</h3>
+          <h3>Principles</h3>
           <div class="work__box">
             <div class="container">
               <div class="container">
