added watchtowr to projects

--- a/index.html
+++ b/index.html
@@ -293,6 +293,42 @@
 
           <div class="work__box">
             <div class="work__text">
+              <h3>WatchTowr</h3>
+              <p>
+                An Android app developed in Java to help job searchers warn the community about fraudlent, scammy job postings. This app is still in development with more features coming soon. Download the Realease APK file below to try out the latest version on your local machine.
+              </p>
+              <ul class="work__list">
+                <li>Android</li>
+                <li>Java</li>
+                <li>FireBase/FireStore</li>
+                <li>UX/UI using Figma</li>
+              </ul>
+
+              <div class="work__links">
+                <a href="https://github.com/MitchellWatson/WatchTowr/tree/master" target="_blank" class="link__text">
+                  Visit GitHub <span>&rarr;</span>
+                </a>
+                <a title="View Website" target="_blank">
+                  <img src="./images/github.svg" class="work__code" alt="Link">
+                </a>
+              </div>
+              <br>
+              <div class="work__links">
+                <a href="./app-release.apk" target="_blank" class="link__text" download>
+                  Download APK (Try out WatchTowr!) <span>&rarr;</span>
+                </a>
+                <a title="View Source Code" target="_blank">
+                  <img src="./images/github.svg" class="work__code" alt="GitHub">
+                </a>
+              </div>
+            </div>
+            <div class="work__image-box">
+              <img src="./images/WatchTowr.png" class="work__image" alt="Streamlit" />
+            </div>
+          </div>
+
+          <div class="work__box">
+            <div class="work__text">
               <h3>Full-Stack Machine Learning Model</h3>
               <p>
                 A front-end interface and back-end machine learning model that predicts nordic snowfall levels.
