--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                   Download APK (Try out WatchTowr!) <span>&rarr;</span>
                 </a>
                 <a title="View Source Code" target="_blank">
-                  <img src="./images/github.svg" class="work__code" alt="GitHub">
+                  <img src="./images/download.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
             </div>
